k8s/deployment.dev-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maptocanada-dev-backend
spec:
  selector:
    matchLabels:
      app: maptocanada-dev-backend
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: maptocanada-dev-backend
    spec:
      imagePullSecrets:
        - name: yeti2-pull-secret
      containers:
        - name: maptocanada-dev-backend
          image: __IMAGE_NAME_DJANGO__:__COMMIT_TAG__
          command: ["./app"]
          ports:
            - containerPort: 80
          volumeMounts:
            - name: www-data
              mountPath: /data
          resources:
            limits:
              memory: 1024Mi
              cpu: "0.2"
      volumes:
        - name: www-data
          hostPath:
            path: __DATA_PATH__
