k8s/service.django.yaml
apiVersion: v1
kind: Service
metadata:
  name: maptocanada-django
spec:
  selector:
    app: maptocanada-django
  ports:
    - port: 8000
      targetPort: 8000
      name: maptocanada-django
